--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,11 +37,17 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^2.13.0
   firebase_auth: ^4.6.1
+  easy_localization:
+  tflite: ^1.1.1
+  tflite_flutter: ^0.10.1
+  google_fonts: ^5.1.0
+  #flutter_locales:
+
 
   image_picker: ^0.8.7
-  chat_gpt_sdk: ^2.0.4
-  flutter_chatgpt: ^1.0.0
-  velocity_x: ^3.6.0
+  dialog_flowtter:
+  #flutter_localization: ^0.1.14
+  intl: any
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -66,10 +72,14 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+      - assets/
       - assets/images/camera.png
       - assets/images/gallery.png
       - assets/images/image_placeholder.png
       - assets/images/logo1.png
+      - resources/langs/en-EN.json
+      - resources/langs/ur-UR.json
+      - resources/langs/sn-SN.json
       #-assets/
   #   - images/a_dot_ham.jpeg
 
